# gen-config

./: CHANGELOG.md  README.md  config-gen.cabal  default.nix  hie.yaml  test.json
.devcontainer/: Dockerfile  devcontainer.json
app/: Main.hs
src/: Formats.hs  Template.hs
src/Formats/: Formats.hs  Toml.hs  Vimrc.hs
test/: test.dhall  vimrc.dhall
