cabal-version:      2.4
name:               config-gen
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             SeungheonOh
maintainer:         dan.oh0721@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Formats, Template

    -- Modules included in this library but not exported.
    other-modules: 
        Formats.Formats,
        Formats.Vimrc,
        Formats.Toml

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.1.0,
        aeson, 
        bytestring,
        utf8-string,
        unordered-containers,
        text,
        vector,
        dhall,
        sum-type-boilerplate,
        template-haskell
    hs-source-dirs:   src
    default-language: Haskell2010

executable config-gen
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        config-gen,
        aeson, 
        bytestring,
        utf8-string,
        unordered-containers,
        text,
        vector,
        dhall,
        sum-type-boilerplate,
        template-haskell
    hs-source-dirs:   app
    default-language: Haskell2010
